--- a/app_wallpaper/pubspec.yaml
+++ b/app_wallpaper/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # UI utilities
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
