--- a/app_wallpaper/pubspec.yaml
+++ b/app_wallpaper/pubspec.yaml
@@ -1,41 +1,45 @@
 name: app_wallpaper
 description: "A wallpaper app with various features."
-_to: 'none' 
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
-
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+  http: ^1.2.0
+
   cupertino_icons: ^1.0.8
-  
+
   provider: ^6.1.1
-  
+
   # UI components
   cached_network_image: ^3.3.1
   flutter_staggered_grid_view: ^0.7.0
   shimmer: ^3.0.0
-  lottie: ^2.7.0
-  
+  lottie: ^3.3.1  # Updated
+
   # Authentication
   shared_preferences: ^2.2.2
-  
+
   # Navigation
-  go_router: ^12.1.3
-  
+  go_router: ^16.1.0  # Updated
+
   # Image handling
-  image_picker: ^1.0.4
-  image_gallery_saver: ^2.0.3
-  path_provider: ^2.1.1
-  
+  image_picker: ^1.0.7
+  image_gallery_saver_plus: ^4.0.1  # Swapped in place of image_gallery_saver
+  path_provider: ^2.1.2
+  path: ^1.9.0
+  permission_handler: ^11.3.1
+  dio: ^5.4.2
+  flutter_local_notifications: ^17.1.2
+  google_mobile_ads: ^4.0.0
+
   # Animation
-  flutter_animate: ^4.2.0
-  
+  flutter_animate: ^4.3.0
+
   # UI utilities
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
@@ -45,8 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
-
+  flutter_lints: ^6.0.0  # Updated
 
 flutter:
 
@@ -55,5 +58,3 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
-  
-
