--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.6' # or whatever version you're using
+          flutter-version: '3.22.2' # Dart 3.8 compatible
           channel: stable
 
       - name: Install dependencies
