--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.2' # Dart 3.8 compatible
+          flutter-version: '3.32.8'  # ✅ Ensures Dart 3.8 support
           channel: stable
-
+          
       - name: Install dependencies
         run: flutter pub get
         working-directory: app_wallpaper
