--- a/app_wallpaper/pubspec.yaml
+++ b/app_wallpaper/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   go_router: ^16.1.0  # Updated
 
   # Image handling
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
+  firebase_storage: ^12.4.10
+  firebase_messaging: ^15.2.10
   image_picker: ^1.0.7
   image_gallery_saver_plus: ^4.0.1  # Swapped in place of image_gallery_saver
   path_provider: ^2.1.2
